------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Feb-2010 Jean-Marie Simonet
^ Refactored com_modules inis/keys

06-Feb-2010 Hannes Papenberg
# Partially fixed the login when site is offline

05-Feb-2010 Mark Dexter
^ Improve documentation for SeleniumConfig sample file

05-Feb-2010 Mark Dexter
# Revert revision 14595 (caused errors in user and menu item edit)

05-Feb-2010 Jean-Marie Simonet
^ Refactored mod_custom site and admin ini/keys

05-Feb-2010 Christophe Demko
^ Adding the possibility to have more than one category tree in an extension.
^ Consolidating the JCategories class

05-Feb-2010 Jean-Marie Simonet
# Translating Toggle Editor button. Correcting Error Key in tiny.
^ Refactored search plugins ini/keys

05-Feb-2010 Christophe Demko
^ Having only one translation file per template (in administrator/language for admin ones and language for site ones)
# Translating buttons in the editor
^ Adding readonly attribute on some jform fields

04-Feb-2010 Christophe Demko
# Correcting a bug in JForm: setFieldAttribute was incorrect when the attribute does not exist 

04-Feb-2010 Jean-Marie Simonet
^ Refactored user plugins ini keys.
^ Refactored system plugins ini keys
^ Refactored editors plugins ini keys.

04-Feb-2010 Hannes Papenberg
^ Changed behaviour of JHTML::image, JHTML::script and JHTML::stylesheet and moved images back into the respective folder

04-Feb-2010 Andrew Eddie
 + Added JHtmlString
 ^ Changed JQuery to JDatabaseQuery; changed behaviour of JDatabase::getQuery

03-Feb-2010 Jean-Marie Simonet
^ Refactored editors-xtd plugins ini keys.

03-Feb-2010 Hannes Papenberg
# Fixed bug in JTable::reset() that don't properly reset the values - Thanks Jonnathan!