@@ -9,7 +9,7 @@
 		<field
 			name="target"
 			type="componentlayout"
-			label="JField_Alt_Layout_Label"
+			label="JFIELD_ALT_LAYOUT_LABEL"
 			description="JField_Alt_Component_Layout_Desc"
 			extension=""
 			view="categories"
