@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 06-Feb-2010 Jean-Marie Simonet
 ^ Refactored com_modules inis/keys
+^ Refactored globally modules cache and cache-time keys
 
 06-Feb-2010 Hannes Papenberg
 # Partially fixed the login when site is offline
